--- a/feature/ingredientsearch/build.gradle
+++ b/feature/ingredientsearch/build.gradle
@@ -40,7 +40,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.0-alpha02'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
 }
 
@@ -58,6 +58,7 @@ dependencies {
     implementation libs.androidx.compose.ui
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.compose.material3
+    implementation libs.androidx.lifecycle.runtime.compose
     implementation libs.dagger
     kapt libs.dagger.compiler
 
