--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -52,4 +52,8 @@ dependencies {
 
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
+
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
+    debugImplementation libs.androidx.compose.ui.test.manifest
 }
