--- a/feature/shoppinglist/build.gradle
+++ b/feature/shoppinglist/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation libs.androidx.compose.ui
     implementation libs.androidx.compose.material
     implementation libs.androidx.navigation.compose
+    implementation libs.androidx.lifecycle.runtime.compose
     implementation libs.androidx.compose.material3
     implementation libs.dagger
     kapt libs.dagger.compiler
