--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -60,9 +60,9 @@ dependencies {
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
 
-    // TODO: Due to a bug with matchingFallbacks, debugImplementation doesn't work here. Look
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.test.manifest
+    // TODO: debugImplementation doesn't work for this dependency for some reason...look
     //  into later. We use implementation to circumvent the bug for now.
-    implementation libs.androidx.compose.ui.tooling
     implementation libs.androidx.compose.ui.tooling.preview
-    implementation libs.androidx.compose.ui.test.manifest
 }
