--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -25,6 +25,7 @@ android {
         }
         mockDebug {
             initWith(debug)
+            matchingFallbacks = ['debug']
         }
         release {
             minifyEnabled false
@@ -73,9 +74,9 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    // TODO: Due to a bug with matchingFallbacks, debugImplementation doesn't work here. Look
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.test.manifest
+    // TODO: debugImplementation doesn't work for this dependency for some reason...look
     //  into later. We use implementation to circumvent the bug for now.
-    implementation libs.androidx.compose.ui.tooling
     implementation libs.androidx.compose.ui.tooling.preview
-    implementation libs.androidx.compose.ui.test.manifest
 }
